# Text-Adventure-World-Console-Based-Game-Cpp-Project

./: .gitignore  CMakeLists.txt  Direction.h  GameProject.sln  InstructionsScreen.cpp  InstructionsScreen.h  Point.cpp  Point.h  README.md  Screen.cpp  Screen.h  console.h  game.cpp  game.h  main.cpp  objects.h  player.cpp  player.h  utils.h
GameProject/: Bomb.h  Door.h  DroppedItem.cpp  GameBoard.h  GameProject.vcxproj  GameRecorder.h  Heart.cpp  InputHandler.cpp  Key.cpp  LightSwitch.h  LoadGameScreen.cpp  MenuScreen.h  ObjectManager.h  PauseMenu.cpp  Point.cpp  StatusBar.h  main.cpp
GameProject/Core/: Direction.h  Game.h  GameBoard.cpp  GameObject.cpp  GameObject.h  GameRecorder.cpp  GameStateSaver.h  Point.h  console.h
GameProject/GameObjects/: Bomb.cpp  Coin.cpp  Coin.h  Gate.h  Key.h  Player.h  Spring.cpp  Spring.h  Switch.cpp  Switch.h  Torch.cpp  Wall.cpp
GameProject/Managers/: LivesManager.h
GameProject/Systems/: CollisionSystem.h  (+6 more)
Snake/: Point.h  Snake.cpp  Snake.h  Snake.sln  Snake.vcxproj  main.cpp
SnakeWithKeyboardAndWalls/: Point.cpp  Point.h  Screen.cpp  Snake.cpp  Snake.vcxproj  main.cpp  utils.h
exe3/: BaseScreen.cpp  Door.cpp  DroppedItem.h  Game.cpp  GameConfig.h  GameLevel.cpp  GameLevel.h  GameProject.sln  GameProject.vcxproj  GameStateSaver.cpp  Gate.cpp  Heart.h  InstructionsScreen.cpp  InteractionHandler.h  LevelRenderer.cpp  LightSwitch.cpp  LightingSystem.cpp  LightingSystem.h  LivesManager.cpp  MenuScreen.cpp  MessageDisplay.h  Obstacle.cpp  Obstacle.h  Player.cpp  Riddle.cpp  Riddle.h  ScreenParser.h  StatusBar.cpp  Torch.h  Wall.h
(+7 files in other folders)
